-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 2.7.0-rc
-
None
-
ubuntu lucid 10.04, qt commercial 4.8.4, and qt creator commercial 2.7.0-RC1. Cmake 2.8.11-rc1 (but also seen in previous versions of qt creator with cmake 2.8.10.1), using the makefile generator, and gcc
This looks like QTCREATORBUG-2207, which was closed in 2010.
With a cmake project:
go to projects/Build Settings. Clone configuration.
The Build step becomes "make all all" instead of "make all" (or more likely "make all -j 8")
The Clean steps becomes "make" with no clean.
- replaces
-
QTCREATORBUG-9137 Cloning of build configurations incorrect
-
- Closed
-
For Gerrit Dashboard: QTCREATORBUG-8998 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
51708,1 | CMake::MakeStep: Fix cloning | 2.7 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |