CMake::MakeStep: Fix cloning

Task-number: QTCREATORBUG-8998
Change-Id: If7df2d7adce446a6afb77e7848c623edfa3d6e7a
Reviewed-by: Tobias Hunger <tobias.hunger@digia.com>
Reviewed-by: Eike Ziller <eike.ziller@digia.com>